still stuck on fixing

--- a/styles/index.css
+++ b/styles/index.css
@@ -38,8 +38,6 @@ body {
   color: var(--body-text-color);
   font-size: var(--primary-font-size-body);
   overflow-x: hidden;
-
-  overflow-x: hidden;
 }
 .wrapper {
   max-width: 1100px;
